Fix IE alignment for task order view page

--- a/styles/sections/_task_order.scss
+++ b/styles/sections/_task_order.scss
@@ -47,13 +47,8 @@
 
 .task-order-summary {
 
-
   .panel {
     width: 100%;
-
-    @include ie-only {
-      max-width: 100%;
-    }
   }
 
   .task-order-heading {
@@ -93,6 +88,10 @@
       padding-right: $gap;
     }
 
+    @include ie-only {
+      width: 100%;
+    }
+
     .task-order-next-steps__step {
       .task-order-next-steps__icon {
         padding: $gap $gap 0 0;
@@ -102,6 +101,12 @@
         }
         .incomplete {
           @include icon-color($color-gray-light);
+        }
+      }
+
+      .task-order-next-steps__text {
+        @include ie-only {
+          width: 100%
         }
       }
 
